adding todo app

--- a/src/index.css
+++ b/src/index.css
@@ -3,66 +3,40 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  --header-background-color: #156154;
+  --header-text-color: #dbfff1;
+  --footer-background-color: #156154;
+  --footer-text-color: #dbfff1;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.light-theme {
+  --primary-color: #f0fff8;
+  --primary-text-color: #182b27;
+  --secondary-color: #156154;
+  --secondary-text-color: #dbfff1;
+  --background-color: #f0fff8;
+  --task-color-pending: red;
+  --task-color-progress: blue;
+  --task-color-done: green;
+  --dialog-background-color: rgba(0, 0, 0, 0.5);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.dark-theme {
+  --primary-color: #182b27;
+  --primary-text-color: #f0fff8;
+  --secondary-color: #d5f8ea;
+  --secondary-text-color: #182b27;
+  --background-color: #182b27;
+  --task-color-pending: red;
+  --task-color-progress: blue;
+  --task-color-done: green;
+  --dialog-background-color: rgba(255, 255, 255, 0.3);
 }
