--- a/src/components/taskForm/styles.module.css
+++ b/src/components/taskForm/styles.module.css
@@ -24,7 +24,7 @@
     font-size: 16px;
     width: 100%;
     height: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .inputTaskDesc {
@@ -47,7 +47,7 @@
     font-size: 16px;
     width: 100%;
     height: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .inputTaskName:focus,
@@ -55,6 +55,14 @@
 .inputTaskStatus:focus,
 .inputTaskDueDate:focus {
     outline: none;
+}
+
+.formError {
+    display: block;
+    color: var(--form-error-color);
+    font-style: italic;
+    font-size: 12px;
+    margin-bottom: 10px;
 }
 
 .buttonContainer {
@@ -75,4 +83,10 @@
     color: var(--secondary-text-color);
     border-radius: 7px;
     padding: 10px;
+}
+
+.formButtonDisabled {
+    composes: formButton;
+    cursor: not-allowed;
+    background-color: gray;
 }
