--- a/src/components/taskListComponent/styles.module.css
+++ b/src/components/taskListComponent/styles.module.css
@@ -1,5 +1,6 @@
 .taskListContainer {
     width: 100%;
-    height: calc(100% - 100px);
+    height: calc(100% - 110px);
     padding: 10px 20px;
+    overflow-y: auto;
 }
