--- a/src/components/toolsComponent/styles.module.css
+++ b/src/components/toolsComponent/styles.module.css
@@ -1,7 +1,9 @@
 .toolsContainer {
     width: 100%;
-    height: 100px;
+    height: 110px;
     overflow-x: auto;
+    box-shadow: 0px 1px 1px gray;
+
 }
 
 .taskToolContainer {
@@ -39,15 +41,12 @@
     background-color: var(--secondary-text-color);
     color: var(--primary-text-color);
     text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 
 .taskFilterActive {
-    padding: 5px 10px;
-    margin-right: 15px;
-    border: 1px solid gray;
-    min-width: fit-content;
-    cursor: pointer;
-    text-decoration: none;
+    composes: taskFilter;
     background-color: var(--primary-text-color);
     color: var(--secondary-text-color);
 }
@@ -59,19 +58,39 @@
 
 .sortFilterContainer {
     width: 100%;
-    height: 40px;
+    height: 50px;
     padding: 0 20px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
+
+    span {
+        font-weight: 600;
+        font-size: 14px;
+        margin-right: 10px;
+    }
 }
 
 .sortFilter {
     padding: 5px 10px;
+    height: 25px;
     margin-right: 15px;
     border: 1px solid gray;
     min-width: fit-content;
     cursor: pointer;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    background-color: var(--secondary-text-color);
+    color: var(--primary-text-color);
+}
+
+.sortFilterActive {
+    composes: sortFilter;
+    background-color: var(--primary-text-color);
+    color: var(--secondary-text-color);
 }
 
 .task {
@@ -80,4 +99,29 @@
     padding: 5px 10px;
     width: fit-content;
     cursor: pointer;
+}
+
+.todoCount {
+    margin-left: 5px;
+    background-color: var(--primary-text-color);
+    color: var(--secondary-text-color);
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.todoCountActive {
+    composes: todoCount;
+    background-color: var(--secondary-text-color);
+    color: var(--primary-text-color);
+}
+
+.taskFilter:hover .todoCount {
+    background-color: var(--secondary-text-color);
+    color: var(--primary-text-color);
 }
