--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
   --task-color-progress: blue;
   --task-color-done: green;
   --dialog-background-color: rgba(0, 0, 0, 0.5);
+  --form-error-color: rgb(236, 51, 51);
 }
 
 .dark-theme {
@@ -39,4 +40,5 @@ body {
   --task-color-progress: blue;
   --task-color-done: green;
   --dialog-background-color: rgba(255, 255, 255, 0.3);
+  --form-error-color: rgb(255, 129, 129);
 }
