--- a/src/components/toolsComponent/styles.module.css
+++ b/src/components/toolsComponent/styles.module.css
@@ -27,6 +27,7 @@
 }
 
 .taskContainer {
+    width: 160px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -43,6 +44,8 @@
     text-decoration: none;
     display: flex;
     align-items: center;
+    font-weight: 600;
+    border-radius: 10px;
 }
 
 .taskFilterActive {
@@ -95,10 +98,27 @@
 
 .task {
     margin-left: 15px;
-    border: 1px solid gray;
+    border: 2px solid var(--secondary-color);
     padding: 5px 10px;
     width: fit-content;
     cursor: pointer;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 800;
+    color: var(--secondary-color);
+    span {
+        padding-left: 5px;
+    }
+}
+
+.task:hover {
+    transform: scale(1.05);
+}
+
+.task:active {
+    transform: scale(0.95);
 }
 
 .todoCount {
@@ -111,7 +131,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 600;
 }
 
