--- a/src/components/toolsComponent/styles.module.css
+++ b/src/components/toolsComponent/styles.module.css
@@ -145,3 +145,33 @@
     background-color: var(--secondary-text-color);
     color: var(--primary-text-color);
 }
+
+.selectTaskStatus {
+    padding: 5px 10px;
+    margin-right: 15px;
+    border: 1px solid gray;
+    min-width: fit-content;
+    cursor: pointer;
+    background-color: var(--primary-text-color);
+    color: var(--secondary-text-color);
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+    border-radius: 10px;
+    height: 40px;
+    display: none;
+    visibility: hidden;
+}
+
+@media screen and (max-width: 800px) {
+    .taskFilter {
+        display: none;
+        visibility: hidden;
+    }
+
+    .selectTaskStatus {
+        display: block;
+        visibility: visible;
+    }
+}
