--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,10 @@ body {
   --secondary-color: #156154;
   --secondary-text-color: #dbfff1;
   --background-color: #f0fff8;
-  --task-color-pending: red;
-  --task-color-progress: blue;
-  --task-color-done: green;
+  --task-color-pending: rgb(103, 29, 29);
+  --task-color-progress: rgb(37, 37, 123);
+  --task-color-done: rgb(15, 70, 15);
+  --task-status-color: #dbfff1;
   --dialog-background-color: rgba(0, 0, 0, 0.5);
   --form-error-color: rgb(236, 51, 51);
 }
@@ -36,9 +37,10 @@ body {
   --secondary-color: #d5f8ea;
   --secondary-text-color: #182b27;
   --background-color: #182b27;
-  --task-color-pending: red;
-  --task-color-progress: blue;
-  --task-color-done: green;
+  --task-color-pending: rgb(255, 139, 139);
+  --task-color-progress: rgb(80, 121, 255);
+  --task-color-done: rgb(70, 145, 70);
+  --task-status-color: #dbfff1;
   --dialog-background-color: rgba(255, 255, 255, 0.3);
   --form-error-color: rgb(255, 129, 129);
 }
